Added page header, user details

--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 <body>
     <header>
         <h1>James Hatfield</h1>
-        
+        <p>Senior Support Engineer</p>
+        <p>Address Redacted</p>
+        <p>Telephone Number:</p>
     </header>
-    <section></section>
+    
+    <section>
+
+    </section>
     <footer></footer>
 </body>
 </html>
