Added further page layout sections

--- a/index.html
+++ b/index.html
@@ -9,13 +9,26 @@
     <header>
         <h1>James Hatfield</h1>
         <p>Senior Support Engineer</p>
-        <p>Address Redacted</p>
+        <p>Address:</p>
+        <p>United Kingdom</p>
         <p>Telephone Number:</p>
     </header>
-    
-    <section>
 
+    <section>
+        <h2>Skills</h2>
+        <p>JavaScript, Python, Swift, API's, Stakeholder Communication, Agile, Quality Assurance and Software Testing, Technical Writing</p>
     </section>
-    <footer></footer>
+
+    <section>
+        <h2>Experience</h2>
+    </section>
+
+    <section>
+        <h2>Education</h2>
+    </section>
+
+    <footer>
+        <h2>My Links</h2>
+    </footer>
 </body>
 </html>
