Added work experience section

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 <body>
     <header>
         <h1>James Hatfield</h1>
-        <p>Senior Support Engineer</p>
-        <p>Address:</p>
+        <h2>Senior Support Engineer</h2>
+        <h3>Address:</h3>
         <p>United Kingdom</p>
-        <p>Telephone Number:</p>
+        <h3>Telephone Number:</h3>
+        <p>07000 000000</p>
+        <h3>Email Address:</h3>
+        <p>James.Hatfield1704@outlook.com</p>
     </header>
 
     <section>
@@ -21,10 +24,27 @@
 
     <section>
         <h2>Experience</h2>
+        <h3>2025 - Current - KnowBe4 - Core Support Engineer</h3>
+        <ul>
+            <li>Responsible for resolving escalated customer issues.</li>
+            <li>Resolving technical frontend and backend customer infrastructure issues.</li>
+            <li>Upskilling and training new and existing employees.</li>
+            <li>Technical writing and documentation for product suite.</li>
+        </ul>
+
+        <h3>2020 - 2024 - Egress Software Technologies - Senior Support Engineer</h3>
+        <ul>
+            <li>Worked as first point of contact between customers, Customer Experience teams and Engineering teams.</li>
+            <li>Working alongside Engineering, Development and Quality Assurance teams to document defects and manage fix rollouts.</li>
+            <li>Working with Product Management to understand product requirements from customers and communicate upgrades and product releases.</li>
+            <li>Provided off and on site support for customers with API configurations for debugging and implementation.</li>
+        </ul>
     </section>
 
     <section>
         <h2>Education</h2>
+        <p>2017 - 2020 - Sheffield Hallam University - BSc Business with Information Techology</p>
+        <p>Info</p>
     </section>
 
     <footer>
