Added Education and Experience sections, added 'My Links' section

--- a/index.html
+++ b/index.html
@@ -8,23 +8,25 @@
 <body>
     <header>
         <h1>James Hatfield</h1>
-        <h2>Senior Support Engineer</h2>
-        <h3>Address:</h3>
+        <h2 style="color: green;">Senior Support Engineer</h2>
+        <h3 style="color: green;">Address:</h3>
         <p>United Kingdom</p>
-        <h3>Telephone Number:</h3>
+        <h3 style="color: green;">Telephone Number:</h3>
         <p>07000 000000</p>
-        <h3>Email Address:</h3>
+        <h3 style="color: green;">Email Address:</h3>
         <p>James.Hatfield1704@outlook.com</p>
     </header>
 
+    <hr>
+
     <section>
-        <h2>Skills</h2>
+        <h2 style="color: green;">Skills</h2>
         <p>JavaScript, Python, Swift, API's, Stakeholder Communication, Agile, Quality Assurance and Software Testing, Technical Writing</p>
     </section>
 
     <section>
-        <h2>Experience</h2>
-        <h3>2025 - Current - KnowBe4 - Core Support Engineer</h3>
+        <h2 style="color: green;">Experience</h2>
+        <h3 style="color: darkcyan;">2025 - Current - KnowBe4 - Core Support Engineer</h3>
         <ul>
             <li>Responsible for resolving escalated customer issues.</li>
             <li>Resolving technical frontend and backend customer infrastructure issues.</li>
@@ -32,7 +34,7 @@
             <li>Technical writing and documentation for product suite.</li>
         </ul>
 
-        <h3>2020 - 2024 - Egress Software Technologies - Senior Support Engineer</h3>
+        <h3 style="color: darkcyan;">2020 - 2024 - Egress Software Technologies - Senior Support Engineer</h3>
         <ul>
             <li>Worked as first point of contact between customers, Customer Experience teams and Engineering teams.</li>
             <li>Working alongside Engineering, Development and Quality Assurance teams to document defects and manage fix rollouts.</li>
@@ -41,14 +43,26 @@
         </ul>
     </section>
 
+    <hr>
+
     <section>
-        <h2>Education</h2>
-        <p>2017 - 2020 - Sheffield Hallam University - BSc Business with Information Techology</p>
-        <p>Info</p>
+        <h2 style="color: green;">Education</h2>
+        <h3 style="color: darkcyan;">2017 - 2020 - Sheffield Hallam University - BSc Business with Information Techology</h3>
+        <ul>
+            <li>Databases and SQL</li>
+            <li>SAP and Business Analysis</li>
+            <li>Data Analysis</li>
+            <li>Finance</li>
+        </ul>
     </section>
 
+    <hr>
+
     <footer>
-        <h2>My Links</h2>
+        <h2 style="color: green;">My Links:</h2>
+        <a href="https://github.com/JJHH17" target="_blank">
+            <img src=./assets/GitHub_Logo.png alt="GitHub Icon" width="75" > 
+        </a>
     </footer>
 </body>
 </html>
