--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>James Hatfield CV</title>
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.png">
+    <title>James Hatfield | CV</title>
+    <meta name="keywords" content="James Hatfield, Web Developer, Backend Developer, Frontend Developer">
+    <meta name="author" content="James Hatfield">
 </head>
 <body>
     <header>
